[package]
name = "starlight"
version = "0.1.0"
authors = ["yolocat <developer@yolocat.dev>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []
debug_prints = []
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
linked_list_allocator = { version = "0.10.x", default-features = false, features = ["const_mut_refs"] }

# Optional dependencies
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"

